--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
           <div class="speaker">
             <figure> <img alt="" class="img-responsive center-block" src="assets/images/speakers/manuel.png"
                 height="120px" width="120px"> </figure>
-            <h5>Manuel Silva</h5>
+            <h5>Dr Manuel Silva</h5>
             <div class="speaker_name">Coordinator Professor
               <p>
                 The Institute of Engineering of the Polytechnic
@@ -388,7 +388,7 @@
       <div class="row">
         <div class="col" style="display: flex; justify-content: center;">
           <div class="schedule-box">
-            <span class="subhead_title">Chief Patron</span>
+            <span class="subhead_title">Chief Patrons</span>
             <ul style="line-height: 50%;">
               <li>
                 <p align="center">Dr Elizabeth Verghese, Founder Chancellor</p>
@@ -415,7 +415,7 @@
                 <p align="center"> Dr S N Sridhara, Vice Chancellor</p>
               </li>
               <li>
-                <p align="center"> Dr R. W. Alexander Jesudasan, Pro-Vice Chancellor</p>
+                <p align="center"> Dr R W Alexander Jesudasan, Pro-Vice Chancellor</p>
               </li>
             </ul>
             <span class="subhead_title">Advisory Board</span>
@@ -427,7 +427,7 @@
                 <p align="center"> Dr A Senthil Kumar, Director Research</p>
               </li>
               <li>
-                <p align="center">Dr J.M. Mathana Joseph, Dean Research</p>
+                <p align="center">Dr J M Mathana Joseph, Dean Research</p>
               </li>
               <li>
                 <p align="center">Dr Angelina Geetha, Dean E&T</p>
@@ -436,13 +436,13 @@
                 <p align="center">Dr V N Mani, Senior Research Scientist</p>
               </li>
             </ul>
-            <span class="subhead_title">Conference Chairs</span>
+            <span class="subhead_title">Conference Chair</span>
             <ul style="line-height: 80%">
               <li>
                 <p align="left">Dr RM Kuppan Chetty, Professor </p>
               </li>
             </ul>
-            <span class="subhead_title">Conference Co-Chairs</span> </u>
+            <span class="subhead_title">Conference Co-Chair</span> </u>
             <ul style="line-height: 80%">
               <li>
                 <p align="left">Dr S Sivakumar, Associate Professor </p>
@@ -473,7 +473,7 @@
                   Institute of Porto</p>
               </li>
             </ul>
-            <span class="subhead_title">Convenor</span>
+            <span class="subhead_title">Convenors</span>
             <ul style="line-height: 80%">
               <li>
                 <p align="left">Ms N Seenu, Assistant Professor </p>
@@ -482,13 +482,13 @@
                 <p align="left">Dr Mukund Janardhanan, Director of Education, University of Leicester</p>
               </li>
             </ul>
-            <span class="subhead_title">Co-Convenor</span>
+            <span class="subhead_title">Co-Convenors</span>
             <ul style="line-height: 80%">
               <li>
                 <p align="left">Dr R S Nakandhrakumar, Associate Professor</p>
               </li>
               <li>
-                <p align="left">Dr Rob Thronton, Professor, University of Leicester</p>
+                <p align="left">Dr Rob Thornton, Professor, University of Warwick</p>
               </li>
             </ul>
           </div>
@@ -570,7 +570,7 @@
               <li>
                 <p align="center">
 
-                  Prof Rami S. Alkhawaldeh, University of Jordan, Jordan
+                  Prof Rami S Alkhawaldeh, University of Jordan, Jordan
                 </p>
               </li>
               <li>
@@ -581,13 +581,6 @@
               </li>
               <li>
                 <p align="center">
-
-                  Prof Kuannan Techato, Prince of Songkla University, Thailand
-                </p>
-              </li>
-              <li>
-                <p align="center">
-
                   Prof Mohammad Sabati, University of Kansas, USA
                 </p>
               </li>
@@ -600,13 +593,13 @@
 
               <li>
                 <p align="center">
-                  Prof S. G. Ponnambalam, VIT Vellore
+                  Prof S G Ponnambalam, VIT Vellore
                 </p>
               </li>
 
               <li>
                 <p align="center">
-                  Dr K. Sankaranarayanaswamy, NIT Puducherry
+                  Dr K Sankaranarayanaswamy, NIT Puducherry
                 </p>
               </li>
 
@@ -627,12 +620,12 @@
               </li>
               <li>
                 <p align="center">
-                  Dr G. Satheesh Kumar, SSN Institutions
+                  Dr G Satheesh Kumar, SSN Institutions
                 </p>
               </li>
               <li>
                 <p align="center">
-                  Dr P. Gopinathan, CSIR-CIMFR, Dhanbad
+                  Dr P Gopinathan, CSIR-CIMFR, Dhanbad
                 </p>
               </li>
               <li>
@@ -642,22 +635,17 @@
               </li>
               <li>
                 <p align="center">
-                  Dr G. Shanmugasundar, Sri Sai Ram Institute of Technology, Chennai
+                  Dr G Shanmugasundar, Sri Sai Ram Institute of Technology, Chennai
                 </p>
               </li>
               <li>
                 <p align="center">
-                  Dr V. Dhinakaran, Chennai Institute of Technology, Chennai
+                  Dr V Dhinakaran, Chennai Institute of Technology, Chennai
                 </p>
               </li>
               <li>
                 <p align="center">
                   Dr Neeraj Kumar Rathore, IGNTU, Amarkantak
-                </p>
-              </li>
-              <li>
-                <p align="center">
-                  Dr Prem Kumar Chaurasiya, Bansal Institute of Science and Technology
                 </p>
               </li>
             </ul>
