--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
             <figure> <img alt="" class="img-responsive center-block" src="assets/images/speakers/palani.jpeg"
                 height="110px" width="110px"> </figure>
             <h5>Dr I A Palani</h5>
-            <div class="speaker_name">Professor & Dead Research<br>
+            <div class="speaker_name">Professor & Dean Research<br>
               <p>Indian Institue of Technology, Indore</p>
             </div>
           </div>
