Last date is extended till 30th June 2023

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
           <div class="schedule-box"> <span class="subhead_title">Important Dates</span>
             <div class="time">
               <p>Submission of Full length paper:
-                <mark>9th June, 2023</mark>
+                <mark>Last date is extended till 30th June 2023</mark>
               </p>
               <p> Notification of Acceptance: 7th July, 2023</p>
               <p> Submission of Camera Ready Paper: 14th July, 2023</p>
